# bzltest

./: BUILD  WORKSPACE  go.mod  go.sum
app1/: BUILD.bazel  main.go
