load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "app1_lib",
    srcs = ["main.go"],
    importpath = "example.com/app1",
    visibility = ["//visibility:private"],
    deps = [
        "@com_google_cloud_go_pubsub//:pubsub",
        "@com_google_cloud_go_storage//:storage",
    ],
)

go_binary(
    name = "app1",
    embed = [":app1_lib"],
    visibility = ["//visibility:public"],
)
